Harden the record codec, dataset access, configuration and parity harness of the CardDemo Java module
Signed zoned DISPLAY fields now keep their sign in the bytes. A signed span
initialises with a positive-zero overpunch rather than a zone-F digit, the sign
is carried as an explicit flag beside an unsigned magnitude so a negative zero
survives a round trip, and every transcoding refuses a character the configured
code page cannot represent instead of silently substituting one.

Dataset access is composed in one place. A dataset name is validated as a z/OS
dataset name before it becomes a delimited SQL identifier, the record-image
column is discovered from result-set metadata rather than assumed, a read for
update requires an open transaction and issues a real FOR UPDATE, a keyed read
pushes its key predicate to the backend, and a dataset is probed with a zero-row
query so an open failure is distinguishable from a read failure. Per-call mutable
state moved out of the shared repositories into a closeable file handle.

Diagnostics no longer disclose data. Card numbers and record keys are masked to
their last four digits at their full stored width, free text is reported as a
length, and CVV, social security number, government id, EFT account and password
are withheld outright; text that reaches a log is escaped to a single line. HTTP
failures answer with one sanitized body per error type, naming no program,
return code, exception text or field value.

Configuration binds strictly. Unknown keys are rejected, all twenty-seven
dataset contracts must be present with their key length and key offset, the
dataset code page has no in-code default so a profile must declare it, and the
JDBC driver is determined explicitly rather than falling back to an embedded
database. The test profile's in-memory database credentials and seed rows now
live under the test resources so they cannot ship, its datasets are named rather
than pointed at files, and each run resolves its own work direc